feat: implementar navegação com CustomTabBar e atualizar telas de tabulação

--- a/app.json
+++ b/app.json
@@ -16,7 +16,10 @@
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "softwareKeyboardLayoutMode": "pan",
+      "navigationBarColor": "black",
+      "navigationBarHidden": true
     },
     "web": {
       "bundler": "metro",
